refactored schema, add yaml
