# db-schema/mongo/schema.go
@@ -9,7 +9,7 @@ import (
 var actionSchema = bson.M{
 	"title":       "Action",
 	"bsonType":    "object",
-	"description": "the action to take",
+	"description": "the action taken on the device",
 	"required":    []string{"sequence", "type"},
 	"uniqueItems": true,
 	"properties": bson.M{
@@ -32,20 +32,20 @@ type indexTrait struct {
 	pathName   string
 }
 
-var processTrait = &indexTrait{
+var sketchTrait = &indexTrait{
 	pathUnique: true,
 	pathName:   "pathIndex",
 }
 
-var processIndeces = []mongo.IndexModel{
+var sketchIndeces = []mongo.IndexModel{
 	{
 		Keys: bson.M{
 			"model": 1,
 			"label": 1,
 		},
 		Options: &options.IndexOptions{
-			Name:   &processTrait.pathName,
-			Unique: &processTrait.pathUnique,
+			Name:   &sketchTrait.pathName,
+			Unique: &sketchTrait.pathUnique,
 		},
 	},
 	{
@@ -55,45 +55,49 @@ var processIndeces = []mongo.IndexModel{
 	},
 }
 
-var processSchema = bson.M{
-	"bsonType": "object",
+var sketchSchema = bson.M{
+	"title":       "Sketches",
+	"bsonType":    "object",
+	"description": "the sketch defines the actions taken on a device",
 	"required": []string{
 		"model",
 		"label",
-		"deviceKey",
+		"device",
 		"purpose",
+		"setup",
+		"loop",
 	},
 	"properties": bson.M{
 		"model": bson.M{
 			"title":       "Model",
 			"bsonType":    "string",
-			"description": "the device model type",
+			"description": "the model defines the scope of actions that can be taken",
 		},
 		"label": bson.M{
 			"title":       "Label",
 			"bsonType":    "string",
-			"description": "the name of the process",
+			"description": "the label assigned is unique for the model",
 		},
-		"deviceKey": bson.M{
-			"title":       "Device Key",
+		"device": bson.M{
+			"title":       "Device",
 			"bsonType":    "string",
-			"description": "the key for the device",
+			"description": "the device acted on by this sketch",
 		},
 		"purpose": bson.M{
 			"title":       "Purpose",
 			"bsonType":    "string",
-			"description": "the purpose or intent",
+			"description": "the purpose of this sketch",
 		},
 		"setup": bson.M{
 			"title":       "Setup",
 			"bsonType":    "array",
-			"description": "the actions taken during the setup stage",
+			"description": "the setup stage list of actions",
 			"items":       actionSchema,
 		},
 		"loop": bson.M{
 			"title":       "Loop",
 			"bsonType":    "array",
-			"description": "the actions taken during the processing loop",
+			"description": "the loop cycle list of actions",
 			"items":       actionSchema,
 		},
 	},
@@ -107,7 +111,7 @@ var deviceTrait = &indexTrait{
 var deviceIndeces = []mongo.IndexModel{
 	{
 		Keys: bson.M{
-			"domain": 1,
+			"sector": 1,
 			"label":  1,
 		},
 		Options: &options.IndexOptions{
@@ -129,19 +133,15 @@ var pinSchema = bson.M{
 	"items": bson.M{
 		"title":       "Pin",
 		"bsonType":    "object",
-		"description": "the pin definition",
+		"description": "the pin as defined by its purpose",
 		"required":    []string{"id", "label", "purpose"},
 		"uniqueItems": true,
 		"properties": bson.M{
-			"id": bson.M{
-				"title":       "Id",
-				"bsonType":    "number",
-				"description": "the pin number",
-			},
+			"id": pinIDDef,
 			"label": bson.M{
 				"title":       "Label",
 				"bsonType":    "string",
-				"description": "the label assigned to the pin",
+				"description": "the label assigned is unique for this device",
 			},
 			"purpose": bson.M{
 				"title":       "Purpose",
@@ -153,18 +153,19 @@ var pinSchema = bson.M{
 }
 
 var deviceSchema = bson.M{
+	"title":    "Devices",
 	"bsonType": "object",
-	"required": []string{"domain", "label", "model"},
+	"required": []string{"sector", "label", "model"},
 	"properties": bson.M{
-		"domain": bson.M{
-			"title":       "Domain",
+		"sector": bson.M{
+			"title":       "Sector",
 			"bsonType":    "string",
-			"description": "the name of the domain",
+			"description": "the sector groups interconnected devices",
 		},
 		"label": bson.M{
 			"title":       "Label",
 			"bsonType":    "string",
-			"description": "the name of the device",
+			"description": "the label assigned is unique in the sector",
 		},
 		"model": bson.M{
 			"title":       "Model",
